--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "@xhayper/discord-rpc",
-    "version": "1.0.15",
+    "name": "@p-0001/discord-rpc",
+    "version": "1.0.0",
     "description": "a fork of discordjs/RPC",
     "main": "dist/index.js",
-    "author": "xhayper",
+    "author": "P-0001",
     "license": "ISC",
     "types": "dist/index.d.ts",
-    "repository": "github:xhayper/discord-rpc",
+    "repository": "github:P-0001/discord-rpc",
     "keywords": [
         "typescript",
         "discord",
@@ -23,6 +23,7 @@
     "dependencies": {
         "axios": "^1.3.2",
         "discord-api-types": "^0.37.31",
+        "got": "^12.6.0",
         "ws": "^8.12.0"
     },
     "devDependencies": {
