--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
   "search.exclude": {
     ".yarn": true,
     "yarn.lock": true
-  }
+  },
+  "cSpell.words": [
+    "discordapp",
+    "tsup"
+  ]
 }
