--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
         "discord-ipc"
     ],
     "scripts": {
-        "build": "del-cli -f dist && tsc",
-        "prepack": "pnpm run build"
+        "build": "del-cli -f dist && tsup src/index.ts",
+        "prepack": "pnpm run build",
+        "start": "node dist/index",
+        "test": "npx ts-node -r dotenv/config examples/simple_status.ts"
     },
     "dependencies": {
-        "axios": "^1.3.2",
-        "discord-api-types": "^0.37.31",
-        "got": "^12.6.0",
-        "ws": "^8.12.0"
+        "discord-api-types": "^0.37.35",
+        "got": "11.8.6"
     },
     "devDependencies": {
         "@types/node": "^14.*",
-        "@types/ws": "^8.5.4",
-        "del-cli": "^5.0.0"
+        "del-cli": "^5.0.0",
+        "dotenv": "^16.0.3",
+        "tsup": "^6.6.3"
     },
     "engines": {
         "node": ">=14.18.0"
