--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-    "name": "@p-0001/discord-rpc",
-    "version": "1.0.10",
+    "name": "@emerald-aio/discord-rpc",
+    "version": "1.0.11",
     "description": "a fork of discordjs/RPC",
     "main": "dist/index.js",
     "author": "P-0001",
     "license": "ISC",
     "types": "dist/index.d.ts",
+    "private": false,
     "repository": "github:P-0001/discord-rpc",
     "keywords": [
         "typescript",
@@ -17,7 +18,7 @@
         "discord-ipc"
     ],
     "scripts": {
-        "build": "del-cli -f dist && tsup src/index.ts",
+        "build": "del-cli -f dist && tsup src/index.ts --dts",
         "prepack": "pnpm run build",
         "start": "node dist/index",
         "test": "npx ts-node -r dotenv/config examples/simple_status.ts"
@@ -30,7 +31,8 @@
         "@types/node": "^14.*",
         "del-cli": "^5.0.0",
         "dotenv": "^16.0.3",
-        "tsup": "^6.6.3"
+        "tsup": "^6.6.3",
+        "typescript": "^4.9.5"
     },
     "engines": {
         "node": ">=14.18.0"
